--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 <h2 id="members-of-the-tcn-coalition-include-">Members of the TCN Coalition include:</h2>
 <ul>
 <li><a href="https://CoEpi.org">CoEpi</a></li>
+  <li><a href="http://tracenow.org/">TraceNow</a></li>
 <li><a href="https://www.ito-app.org/">ITO</a></li>
 <li><a href="https://docs.google.com/presentation/d/163WcvBqElA5aVDKIHY9jeY5fTtzj3a-zZLYRaEgYELg">Secure Open Standard for Tracking and Notification</a></li>
 </ul>
